Lighthouse warning fixed - Main image converted into an AVIF file to speed up the loading of the webpage on mobile screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -144,7 +144,7 @@ h1, h2 {
 #main_image {
     height: 100%;
     width: 100%;
-    background: url('../images/pancakes.jpeg') no-repeat center center;
+    background: url('../images/pancakes.avif') no-repeat center center;
     background-size: cover;
     margin: auto;
 }
